[package]
name = "nephren"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
clap = { version = "4.6.1", features = [
    "derive",
    "color",
    "help",
    "usage",
    "suggestions",
] }
enum_dispatch = "0.3.13"
log = "0.4.29"
reqwest = "0.13.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_qs = "1.1.2"
simple_logger = { version = "5.2.0", features = ["colors"] }
tabled = "0.20.0"
tokio = { version = "1.52.1", features = ["full"] }
url = "2.5.8"
